- removed messages.json (obsolete, I now use an array to store old messages) + chat history (no longer uses messages.json, just uses an array) + added a scrolldown function that checks if there are any stored messages in the array and promptly scroll down to the bottom of the chat if true + chat bad word filter + addition with various whitespace characters + made the 'tune in :0' panel have functionality (checks on yt and twitch if I'm live or not) + added both yt and twitch titles a link to either of my channel pages

--- a/api/public/style.css
+++ b/api/public/style.css
@@ -1082,6 +1082,11 @@ table {
   align-items: center;
 }
 
+.sm p:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 .site_logo {
   width: 20px;
   height: auto;
@@ -1146,6 +1151,10 @@ table {
   height: 215px;
   width: 90%;
   padding-right: 10px;
+}
+
+.layer h3 {
+  font-size: 1em;
 }
 
 .chat-gif {
